# clockbench

./: .gitignore  LICENSE  README.md  clockbench_evaluate.py  clockbench_grade.py  pyproject.toml
input/: answers_sample.json  input_sample.json
